by greenSkin: Now hard-setting the view page 'series/%'.
by greenSkin: Added menu item to 'series' view page.
by greenSkin: Added default theme template file for series view.
by greenSkin: Updated views defaults: removed the page displays in favor of 
  hardcoding them within the module.
by greenSkin: Reverted comments in views-view-fields--series.tpl.php to the 
  original default comments.


Series 6.x-x.x, 2010-07-29
--------------------------
by greenSkin: Set a default weight to nodes in a series when they are first 
  added to that series. Clean out the weight for a node in a series when it is 
  no longer tied to that series. Clear the caches for series a node was formerly 
  tied to and newly tied to.
by greenSkin: Instead of giving a default weight of 0 to nodes newly added to a 
  series, we give a weight that equals the count of nodes already in the series. 
  This ensures the node initially is added to the end of the series since 
  weights start at -10 (gives a buffer of 10).
by greenSkin: Initial implementation of hook_block() to show series navigation.
by greenSkin: Initial work begun on embedding views to 'series/%'.


Series 6.x-x.x, 2010-07-28
--------------------------
by greenSkin: Fixed 'Add another' button to validate and redirect correctly when 
  only one content type is used for the series vocabulary.
by greenSkin: Added series edit menu item '/series/%series/edit'. Added 
  series_access function.
by greenSkin: Added a wrapper function for the node series edit page callback to 
  use the series_edit_form and pass it the series object instead of the node 
  object.
by greenSkin: Set #theme on series_edit_form so series_node_edit_form utilizes 
  the same theme callback. Redirecting to series edit page now works when 
  creating new nodes in a series. Instead of using a submit function to perform 
  the redirection, we perform the operation in hook_nodeapi with ops insert and 